fix(table style): add word wrap

--- a/themes/concise/source/css/_base/layout.styl
+++ b/themes/concise/source/css/_base/layout.styl
@@ -66,9 +66,7 @@ a
   margin-top 20px
 
 table
-  display: block;
-  overflow-x: auto;
-  white-space: nowrap
+
   font-family: 'Arial';
   margin: 25px auto;
   border-collapse: collapse;
